--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,5 +3,6 @@
 
     <dimen name="dimen_10dp">10dp</dimen>
     <dimen name="dimen_2dp">2dp</dimen>
+    <dimen name="dimen_5dp">5dp</dimen>
 
 </resources>
