--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#662E1C</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
+    <color name="c_FFFF8D">#D7CCC8</color>
+    <color name="c_A1887F">#A1887F</color>
 
 </resources>
