--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,13 @@
     <color name="colorPrimary">#3D251D</color>
     <color name="colorPrimaryDark">#662E1C</color>
     <color name="colorAccent">#FF4081</color>
+
+
     <color name="white">#FFFFFF</color>
     <color name="c_FFFF8D">#D7CCC8</color>
     <color name="c_A1887F">#A1887F</color>
+    <color name="c_4CAF50">#4CAF50</color>
+    <color name="c_8BC34A">#8BC34A</color>
+    <color name="c_CDDC39">#CDDC39</color>
 
 </resources>
