--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/c_4CAF50"
     tools:context="myportfolio.com.tabswithswipekotlin.bottomnavigation.fragment.MusicFragment">
 
     <!-- TODO: Update blank fragment layout -->
